<?xml version="1.0"?>
<package format="2">
  <name>tof_groundplane_est</name>
  <version>0.0.0</version>
  <description>tool to estimate the groundplane from depth image or point cloud</description>

  <license>MRT</license>
  <maintainer email="uitlx@student.kit.edu">Moritz Schnetz</maintainer>
  <author email="uitlx@student.kit.edu">Moritz Schnetz</author>
  <url type="repository"></url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mrt_cmake_modules</build_depend>
  <test_depend>gtest</test_depend>
  <depend>mrt_opencv</depend>  
  <depend>calib_storage</depend>
<depend>libboost-python</depend>
<depend>camera_models</depend>


  <!--
    Documentation for dependencies:
    <build_depend>            Build-time dependency required to build
                              this package, e.g. boost, opencv.
    <build_export_depend>     Exported build-time dependency required to
                              build packages that depend on this package,
                              e.g. boost, opencv.
    <exec_depend>             Execution dependency required to run this
                              package, e.g. boost, opencv.
    <depend>                  Build-time, exported build-time and execution
                              dependency. This is a bundled synonym for
                              <build_depend>, <build_export_depend> and
                              <exec_depend>.
  -->
  <!--
    Example:
    <depend>mrt_opencv</depend>
  -->

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
